# swaggertower

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: build_docker_image.yml
app/: main.py  settings.py
